overflow fix 2

--- a/block-templates/homepage/banner/template.scss
+++ b/block-templates/homepage/banner/template.scss
@@ -3,6 +3,8 @@
 
 .banner {    
 
+    overflow: unset;
+
     &__wrapper {
         overflow: unset;
     }
